force-app/main/default/objects/Schedule_A_Data__c/Schedule_A_Data__c.object-meta.xml
<CustomObject>
    <label>Schedule A Data</label>
    <nameField>
        <displayFormat>SAD-{00000}</displayFormat>
        <label>Schedule A Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule A Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>