force-app/main/default/objects/Schedule_A_Data__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Schedule A Data</relationshipLabel>
    <relationshipName>Schedule_A_Data</relationshipName>
    <type>Lookup</type>
</CustomField>