force-app/main/default/objects/Schedule_A_Data__c/fields/Quote_Creation_Error__c.field-meta.xml
<CustomField>
    <fullName>Quote_Creation_Error__c</fullName>
    <inlineHelpText>The error that occured in quote creation</inlineHelpText>
    <label>Quote Creation Error</label>
    <type>TextArea</type>
</CustomField>