force-app/main/default/objects/Schedule_A_Data__c/fields/Schedule_A__c.field-meta.xml
<CustomField>
    <fullName>Schedule_A__c</fullName>
    <label>Schedule A</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>